/** @page apreq_changes CHANGES
@brief List of major changes.


@section v2_06 Changes with libapreq2-2.06


- Perl API [joes]
  Drop support for Apache2::Request::new's HOOK_DATA.
  UPLOAD_HOOK now takes only two arguments: ($upload, $data).

- Perl API [joes]
  Drop support for Apache2::Cookie::Jar::new's VALUE_CLASS.
  2.05-dev broke that API, and it's not worth trying to fix.
  People who need that should use APR::Request::Cookie::Table's
  cookie_class() API instead.

- Perl API [joes]
  Fix cookie domain/path munging in Apache2::Cookie::new().


@section v2_05_dev Changes with libapreq2-2.05-dev (released May 5, 2005)


- Win32 build [Randy Kobes]
  Have top-level 'nmake', 'nmake test', and 'nmake install'
  targets, respectively, also include building, testing, and
  installing the corresponding perl glue targets.

- C API [geoff]
  Minimum httpd version is now 2.0.48, which includes the official
  apr 0.9.4 release.

- C API [Max Kellermann]
  Fix apreq_quote.

- Perl API [joes]
  Remove Apache2::Request::args.  WARNING: through inheritance,
  args() now maps to Apache2::RequestRec::args.  Folks that want
  the pre-2.05-dev behavior need to invoke APR::Request::args by name.

- C API [joes, Max Kellermann]
  Add apreq_initialize, apreq_pre_initialize and apreq_post_initialize.
  These are not thread-safe operations, so applications need to ensure
  they are invoked (in the correct sequence) prior to using any apreq2
  modules.

- C, Perl API [joes]
  Add pool, bucket_alloc to apreq_handle_t.

- Perl API [joes]
  Drop $data argument from UPLOAD_HOOK, and also drop HOOK_DATA option.
  Perl folks should use a closure instead of passing in context data.

- Perl API [joes]
  Move bake, bake2 to Apache2::Cookie, now requiring
  an extra $r argument.  Also ""-operator is mapped
  to as_string() for Apache2::Cookie;  but APR::Request::Cookie
  maps it to value().

- C API [joes]
  Remove header_in & header_out from apreq_module_t.